<resources>
    <string name="app_name">SignUpScreen</string>
    <string name="sign_up_txt">Cadastro</string>
    <string name="user_txt">Usuario</string>
    <string name="senha_txt">Senha</string>
    <string name="email_txt">Email</string>
    <string name="acessar_btn_txt">Acessar</string>
    <string name="screen_message">Use uma Plataforma Social</string>

    <string name="tela3_h1">A voz da arquibancada</string>
    <string name="tela3_info_data_publicacao">Publicado em 24/09/2017 - 17:44</string>
    
    <string name="tela4_tiluto">Ação faz punho cerrado aparecer na torcida...</string>
    <string name="tela4_info_data_publicacao">Publicado em 24/09/2017 - 22:03</string>
    <string name="tela4_info_autor">GIOVANNE BRITTO @GIONB</string>
    <string name="tela4_nome_time">Nome do Time</string>

    <string-array name="estado">
        <item>Minas Gerais</item>
        <item>Rio de Janeiro</item>
        <item>São Paulo</item>
        <item>Espírito Santo</item>
        <item>Goiânia</item>
    </string-array>

    <string-array name="times">
        <item>Atletico MG</item>
        <item>Atletico PR</item>
        <item>Botafogo</item>
        <item>Corinthians</item>
        <item>Cruzeiro</item>
    </string-array>

    <string-array name="cidades">
        <item>Cidade 1</item>
        <item>Cidade 2</item>
        <item>Cidade 3</item>
        <item>Cidade 4</item>
        <item>Cidade 5</item>
        <item>Cidade 6</item>
        <item>Cidade 7</item>
    </string-array>

    <!-->texto da publicação simples<!-->
    <string name="tela3_publicacao">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
