<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sing_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.signupscreen.SignUpActivity"
    android:orientation="vertical"
    android:background="@color/azurcolor">


    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_txt"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/fontcolor"/>

            <EditText
                android:layout_width="250dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/fontcolor"
                android:hint="@string/user_txt"
                android:background="@drawable/edttextstyle"
                />
            <EditText
                android:layout_width="250dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/fontcolor"
                android:hint="@string/email_txt"
                android:background="@drawable/edttextstyle"
                />
            <EditText
                android:layout_width="250dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/fontcolor"
                android:hint="@string/senha_txt"
                android:background="@drawable/edttextstyle"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="32dp"
                android:text="@string/acessar_btn_txt"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:background="@drawable/ripple"
                android:textColor="@color/whitecolor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:background="@drawable/linear_layout_screen_style">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/screen_message"
                    android:textColor="@color/whitecolor"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    >
                    <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="#00000000"
                        android:src="@mipmap/face"
                        android:layout_marginRight="16dp"/>
                    <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="#00000000"
                        android:src="@mipmap/google"
                        android:layout_marginRight="16dp"/>
                    <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="#00000000"
                        android:src="@mipmap/twiter"
                        android:layout_marginRight="16dp"/>
                    <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="#00000000"
                        android:src="@mipmap/linkedin"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
