<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.signupscreen.Tela4Activity"
    android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela4_nome_time"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/imagem"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Legenda da Imagem/Video"
                    android:paddingStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tela4_tiluto"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="vertical"
                    android:background="#FFD5E0">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tela4_info_data_publicacao"
                        android:paddingStart="24dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tela4_info_autor"
                        android:layout_marginTop="4dp"
                        android:paddingStart="24dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tela3_publicacao"
                    android:layout_marginTop="24dp"
                    android:paddingStart="24dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>
        </ScrollView>





</LinearLayout>
<!-->
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    <!-->